--- a/portfolio/templates/portfolio/navbar.html
+++ b/portfolio/templates/portfolio/navbar.html
@@ -1,30 +1,24 @@
 <!-- Bootstrap Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background-color:#1d2436;">
-  <a class="nav-item" style="padding-right:10px;" href="index.html"><i class="fa-solid fa-house"></i></a>
+  <a class="nav-item" style="padding-right:10px;" href="{% url 'portfolio' %}""><i class="fa-solid fa-house"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
+
       <li class="nav-item">
-        <a class="nav-link" href="woodworking.html">Woodworking Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="photography.html">Photography</a>
+        <a class="nav-link" href="{% url 'projects' %}">Programming Projects</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="cooking.html">Cooking</a>
+        <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="blog.html">Blogs</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="programming_projects.html">Programming Projects</a>
-      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" href="{% url 'photography' %}">Photography</a>
+      </li> -->
 
     </ul>
   </div>
