--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -15,14 +15,17 @@
             {% for post in posts %}
             <div class="card hidden mx-auto mx-auto" style="width: 18rem; margin:20px; border-color:#575c65;">
                 <img src="{{ post.image.url }}" class="card-img-top" alt="...">
-                <div class="card-body" style="background-color:#383e4b; color:white;">
+                <div class="card-body">
+                    <small class="card-text"><i>{{ post.date_posted|date:"M d, Y" }}</i></small><br>
                     <h5 class="card-title">{{ post.title }}</h5>
-                    <small class="card-text">{{ post.date_posted }}</small>
-
-                    <p class="card-text">{{ post.description }}</p>
                     <br>
-                    <a href="{{ request.path }}projectpost/{{ post.id }}" class="btn float-right "
-                        style="color:white; background-color:rgb(24, 24, 64);">See post</a>
+                    <p class="card-text description">{{ post.description }}</p>
+                    
+                    {% if post.website_link %}
+                    <a href="{{ post.website_link }}" target="_blank" class="btn float-right">See Project</a>
+                    {% else %}
+                    <a href="{{ request.path }}projectpost/{{ post.id }}" class="btn float-right">See Project</a>
+                    {% endif %}
                 </div>
             </div>
             {% endfor %}
