--- a/portfolio/static/portfolio/css/main.css
+++ b/portfolio/static/portfolio/css/main.css
@@ -2,7 +2,7 @@
 body{
     font-family: 'Varela Round';
     color: white;
-    background-color:#373c4a;
+    background-color:#636a63;;
 }
 
 a{
@@ -20,9 +20,32 @@ a:hover{
     text-decoration: none;
 }
 
+.featured{
+   display:flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+   background-color:#212529;
+   border-radius: 10px;
+}
+
+.featured-img{
+    border-radius:10px; 
+    margin-top:40px; 
+    max-height:460px;
+    max-width: 700px;
+    width: auto;
+    height: auto;
+}
+
+.post{
+    border-radius: 10px;
+    padding-top:14px;
+}
+
 /* Changing Default bootstrap input colors */
 .form-control{
-    background-color:#1d2436 !important;
+    background-color:#212529 !important;
     color:white !important;
 }
 
@@ -44,11 +67,13 @@ a:hover{
     gap:0px;
     flex-wrap:wrap;
     margin-top:80px;
-    background-color:#1d2436;
+    background-color:#212529;
     border-radius: 10px;
     height:60wv;
     color: white;
     padding-bottom:20px;
+    margin-left: 5px;
+    margin-right:5px;
 }
 
 /* Make links white */
@@ -79,7 +104,7 @@ a:hover{
 
 #contactmeButton{
     border-radius:5px;
-    background-color:green;
+    background-color:rgb(64, 106, 64);
     border: none;
     color:white;
     height:40px;
@@ -92,11 +117,11 @@ a:hover{
 
 /* email changes color on mouse cursor hover */
 #contactmeButton:hover{
-    background-color: rgb(65, 65, 109);
+    background-color: #636a63;
 }
 
 #sendButton{
-    background-color:green;
+    background-color:rgb(64, 106, 64);
     color: white;
     transition: background-color 1s;
 }
@@ -106,7 +131,7 @@ a:hover{
 }
 
 .modal-content{
-    background-color:#373c4a;
+    background-color:#636a63;
 }
 
 /* Flex-box container */
@@ -115,17 +140,20 @@ a:hover{
     gap:10px;
     flex-direction: row;
     justify-content: center;
+    padding-left: 5px;
+    padding-right:5px;
 }
 
   /* Individual divs within the flex-box containter */
 #content{
-    background-color:#1d2436;
+    background-color:#212529;
     border-radius:10px;
     padding-left:10px;
-    padding-top:1px;
     padding-right:10px;
+    padding-top:1px;
     padding-bottom:20px;
     margin-top:10px;
+    margin-bottom:10px;
 }
 
 /* Main panel (contains aboutme, projects, experience, etc.) */
@@ -150,9 +178,13 @@ a:hover{
 }
 
 /* For mobile */
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
     #maincontent {
       flex-direction: column;
+    }
+
+    .featured-img{
+        max-width: 95vw;
     }
 
   }
@@ -161,7 +193,7 @@ a:hover{
 @media (min-width: 4000px) {
 
     #profile-pic{
-    margin-left:40.5vw;
-}
+        margin-left:40.5vw;
+    }
 
 }
