--- a/portfolio/static/portfolio/css/post-listing.css
+++ b/portfolio/static/portfolio/css/post-listing.css
@@ -2,7 +2,7 @@
 body{
     font-family: 'Varela Round';
     /* color: white; */
-    background-color:#373c4a;
+    background-color:#636a63;
     color:white;
 }
 
@@ -25,9 +25,12 @@ li{
 }
 
 h1{
-    margin-top:20px; 
-    margin-bottom:20px; 
     text-align:center;
+    margin-top:20px; 
+}
+
+small{
+    color:rgb(150, 155, 158);
 }
 
 /* Flex-box container */
@@ -37,22 +40,25 @@ h1{
     gap:10px;
     flex-direction: row;
     justify-content: center;
+    padding-left: 5px;
+    padding-right:5px;
 }
 
 
 /* Flex-box items */
 #content{
-    background-color:#1d2436;
+    background-color:#212529;
     border-radius:10px;
     padding-left:10px;
-    padding-top:1px;
     padding-right:10px;
+    padding-top:1px;
     padding-bottom:20px;
     margin-top:10px;
     min-width:70vw;
     max-width:70vw;
     min-height:89vh;
     height:100%;
+    margin-bottom:10px;
 }
 
 h3{
@@ -99,6 +105,30 @@ p{
     opacity:100%;
 }
 
+.btn{
+   position:absolute;
+   bottom: 0;
+   right: 10px;
+   color:white; 
+   background-color:rgb(64, 106, 64);
+   transition:1s;
+   margin-bottom:10px;
+}
+
+.btn:hover{
+    background-color:#636a63;
+    color:white;
+}
+
+.description{
+    margin-bottom:40px;
+}
+
+.card-body{
+    background-color:#535353; 
+    color:white;
+}
+
 /* Creates one column layout (in place of two) for mobile*/
 @media (max-width: 800px) {
     #maincontent {
@@ -106,7 +136,7 @@ p{
     }
 
     #content{
-        max-width:100vw;
+        max-width:96vw;
     }
 }
 
