--- a/portfolio/templates/portfolio/navbar.html
+++ b/portfolio/templates/portfolio/navbar.html
@@ -1,5 +1,5 @@
 <!-- Bootstrap Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background-color:#1d2436;">
+<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background-color:#212529;;">
   <a class="nav-item" style="padding-right:10px;" href="{% url 'portfolio' %}""><i class="fa-solid fa-house"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -15,10 +15,6 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
       </li>
-
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="{% url 'photography' %}">Photography</a>
-      </li> -->
 
     </ul>
   </div>
