--- a/projects/templates/projects/project_post.html
+++ b/projects/templates/projects/project_post.html
@@ -3,61 +3,25 @@
 
 {% block content %}
 
-<style>
-.main{
-    min-height: 90vh;
-}
-
-a {
-    color:#47754d;
-}
-
-iframe{
-    max-width:90vw;
-}
-img{
-    max-width:90vw;
-}
-
-</style>
-
 <head>
 {% load static %}
 <link href="{% static 'tinymce/css/prism.css' %}" rel="stylesheet">
 <title>Scott Maxwell - {{project.title}}</title>
 </head>
 
-<body style="background-color:#828C83">
-    <div class='row m-0'>
+<body>
 
-        <div class="col">
-        </div>
+    <!-- Main content of page -->
+    <div id="maincontent">
+        <div id="content">
 
-        <div class="col-lg-8 p-3 mb-2 bg-dark text-light main" style="margin-top:60px; border-radius:10px;">
-
-
-            <br>
-            <h1 class="text-light"> {{project.title|safe}} - {{project.description|safe}}</h1>
-            
-
-            <br>
+            <h1>{{project.title|safe}}</h1>
+            <small><i>{{project.date_posted|date:'M d, Y'}}<i></small>
             {% if project.code_link %}
-                <a href="{{project.code_link}}" target="_blank"><p><i class="icon-code"></i> See the code here</p></a>
+                <br>
+                <a><button class="btn">See Code &lt;\&gt;</button></a>
             {% endif %}
-
-
-            <small>{{ project.date_posted|date:'M d, Y' }}</small>
-
-
-            <p> {{project.content|safe}}  </p>
-            <br>
-            <br>
-            <a href="{% url 'projects' %}" style="float:left;"><i class="icon-arrow-left"></i> Back to projects list</a>
-
-        </div>
-
-        <div class="col">
-        </div>
+            <p>{{project.content|safe}}</p>
 
 </body>
 
