--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -201,7 +201,7 @@
 		
 						<!-- Blog Title -->
 						{% if blog.website_link %}
-							<h5><a href="{{ blog.website_link }}">{{ blog.title }}</a></h5><br>
+							<h5><a href="{{ blog.link }}">{{ blog.title }}</a></h5><br>
 						{% else %}
 						<h5><a href="{{ request.path }}blog/blogpost/{{ blog.id }}">{{ blog.title }}</a></h5><br>	
 						{% endif %}
