--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -200,7 +200,7 @@
                         {% endif %}
 		
 						<!-- Blog Title -->
-						{% if blog.website_link %}
+						{% if blog.link %}
 							<h5><a href="{{ blog.link }}">{{ blog.title }}</a></h5><br>
 						{% else %}
 						<h5><a href="{{ request.path }}blog/blogpost/{{ blog.id }}">{{ blog.title }}</a></h5><br>	
