Fixed italics issue on posts

--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -18,7 +18,7 @@
         <div id="content">
 
             <h1>{{text.title|safe}}</h1>
-            <small><i>{{text.date_posted|date:'M d, Y'}}<i></small>
+            <small><i>{{text.date_posted|date:'M d, Y'}}</i></small>
             <p>{{text.content|safe}}</p>
 
 </body>
