Fixed email form submission

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -28,7 +28,7 @@
                     <br>
 
                     <form class="form" method="POST" action="https://formsubmit.co/{{ about_me.email }}">
-
+                        <input type="hidden" name="_url" value="https://www.scottwmaxwell.com/">
                         <div class="form-group">
                             <input class="form-control noOutline" type="email" id="email" name="email" type="text"
                                 placeholder="Enter Your Email" required>
