Set Calendar to only scroll when Mobile

--- a/portfolio/static/portfolio/css/main.css
+++ b/portfolio/static/portfolio/css/main.css
@@ -187,6 +187,11 @@ a:hover{
         max-width: 95vw;
     }
 
+    .calendar{
+        border-radius:10px; 
+        overflow:scroll;
+    }
+
   }
 
 /* For ultra wide screens */
