--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -173,7 +173,7 @@
 			</div>
 
             <div id="content">
-                <div class="p-3 mb-2" style="border-radius:10px; overflow:scroll;">
+                <div class="p-3 mb-2 calendar">
                     <h3>My Github Activity</h3>
                     <center>
                         <img class="github-calendar" src="http://ghchart.rshah.org/2a4933/scott-w-maxwell"
