Modified github calendar to sync with set github handle

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -176,7 +176,7 @@
                 <div class="p-3 mb-2 calendar">
                     <h3>My Github Activity</h3>
                     <center>
-                        <img class="github-calendar" src="http://ghchart.rshah.org/2a4933/scott-w-maxwell"
+                        <img class="github-calendar" src="http://ghchart.rshah.org/2a4933/{{ about_me.github_handle }}"
                             alt="scott-w-maxwell's Github chart" />
                     </center>
                 </div>
