Fixed syntax error in portfolio template

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -77,11 +77,11 @@
                     <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
                 </a>
 
-		{{% if about_me.mastadon_url %}}
+		{% if about_me.mastadon_url %}
 			<a id="icon" href={{ about_me.mastadon_url}}" target="_blank">
 				<i class="fa-brands fa-mastodon fa-2x" aria-hidden="true"></i>
 			</a>
-		{{% endif %}}
+		{% endif %}
 		    
             </div>
 
