Fixed URL quotation for mastadon

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -78,7 +78,7 @@
                 </a>
 
 		{% if about_me.mastadon_url %}
-			<a id="icon" href={{ about_me.mastadon_url}}" target="_blank">
+			<a id="icon" href="{{ about_me.mastadon_url}}" target="_blank">
 				<i class="fa-brands fa-mastodon fa-2x" aria-hidden="true"></i>
 			</a>
 		{% endif %}
